# rit-msd-werfen

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  requirements.txt
Cfg/: VoCarCfg.h
Msp/: CMakeLists.txt
Msp/drv/: CMakeLists.txt
Rpi/Cam/: CMakeLists.txt  Cam.cpp  Cam.fpp  Cam.hpp  CamBuffer.cpp  CamBuffer.hpp  CamCfg.h  CamFrame.cpp  CamFrame.hpp  CameraConfig.hpp
Rpi/Cam/core/: libcamera_app.cc  libcamera_app.h
Rpi/Cam/cv/: libcvcam.cc  libcvcam.h
Rpi/Cam/v2/: libcamera_app_v2.cc  libcamera_app_v2.h
Rpi/Display/: Display.hpp  DisplayImpl.cc  DisplayImpl.h  oled.h
Rpi/FramePipe/: FramePipeImpl.h
Rpi/Top/: CMakeLists.txt  Components.hpp  RpiTopologyDefs.hpp  Topology.cc  instances.fpp  main.cc  topology.fpp
Rpi/VideoStreamer/: VideoStreamer.cpp  VideoStreamer.fpp  VideoStreamer.hpp
Rpi/VideoStreamer/encoder/: h264_encoder.cpp
Rpi/VideoStreamer/preview/: drm_preview.cpp
ai/: build_training_set.py
cmake/platform/: rpi3-linux.cmake
data/: RpiTopologyAppDictionary.xml  fprime-1.0.4.vsix
mc/: .cproject  .mxproject  .project  CMakeLists.txt  CMakeLists_template.txt  mc.ioc
mc/Core/Inc/: main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h  stm32l4xx_it.h
mc/Core/Src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
mc/comm/: CMakeLists.txt  packet.c  packet.h
mc/include/: gbl.h
mc/log/: CMakeLists.txt  log.c
mc/motor/: CMakeLists.txt  motor.c  motor.h
mc/src/: circular_buffer.c  circular_buffer.h  config.h  crc.c  crc.h  gbl.h  led.c  led.h  log.h  motor.c  motor.h  motor.h.legacy.txt  packet.c  packet.h  switch.c  switch.h
pcb/WerfenMc/: LedRemap.bak  LedRemap.kicad_sym  WerfenMc.kicad_pcb  WerfenMc.kicad_prl  WerfenMc.kicad_pro  WerfenMc.kicad_sch  WerfenMcHighPower.kicad_sch  WerfenMc_BOM.csv  WerfenMc_estop_fix.kicad_sch  WerfenMc_power_edit.csv  WerfenMc_power_edit.kicad_pcb  WerfenMc_power_edit.kicad_prl  WerfenMc_power_edit.kicad_pro  WerfenMc_power_edit.kicad_sch  WerfenMc_power_edit.xml  fp-info-cache  sym-lib-table
pcb/WerfenMc/output/: WerfenMc-B_Cu.gbr  WerfenMc-B_Mask.gbr  WerfenMc-B_Paste.gbr  WerfenMc-B_Silkscreen.gbr  WerfenMc-Edge_Cuts.gbr  WerfenMc-F_Cu.gbr  WerfenMc-F_Mask.gbr  WerfenMc-F_Paste.gbr  WerfenMc-F_Silkscreen.gbr  WerfenMc-NPTH.drl  WerfenMc-PTH.drl  WerfenMc-bottom.pos  WerfenMc-job.gbrjob  WerfenMc-top.pos  WerfenMc.csv  WerfenMc_power_edit.d356
pcb/WerfenMc/power_edit_out/: WerfenMc_pos.csv  WerfenMc_power_edit-B_Cu.gbr  WerfenMc_power_edit-B_Mask.gbr  WerfenMc_power_edit-B_Paste.gbr  WerfenMc_power_edit-B_Silkscreen.gbr  WerfenMc_power_edit-Edge_Cuts.gbr  WerfenMc_power_edit-F_Cu.gbr  WerfenMc_power_edit-F_Mask.gbr  WerfenMc_power_edit-F_Paste.gbr  WerfenMc_power_edit-F_Silkscreen.gbr  WerfenMc_power_edit-NPTH.drl  WerfenMc_power_edit-PTH.drl  WerfenMc_power_edit-all-pos.csv  WerfenMc_power_edit-job.gbrjob
prototyping/: CMakeLists.txt  alignment.ipynb  difference_of_gaussians.py  harris_corner.py  qr_code_reading.py  sensor_finding.ipynb  sensor_id.ipynb  test_camera.py  test_rpi_cam.cc  text_reading.py
seq/: cam_configure.seq  cam_home.seq  cam_rit.seq  pose_calibration.seq  race.seq
src/: .gitignore  app.py  app_full.py  calibrate.py  cam.py  main.py  mainwindow.ui  realign.py  requirements.txt  stage.py  start.sh  tabs.ui  tumbar_app.py
src/frontend/: .eslintrc.json  .gitignore  index.html  package.json
src/frontend/public/: index.html
src/frontend/src/: Align.tsx  App.tsx  AppTabs.tsx  Camera.tsx  Focus.tsx  Form.tsx  ImageOutput.tsx  Operate.tsx  SettingsForm.tsx  SingleCard.tsx  Status.tsx  Usb.tsx  View.tsx  ViewMode.tsx  api.d.ts  common.d.ts  cookie.ts  index.tsx  main.tsx  react-app-env.d.ts
src/fw/: component.py  log.py  registry.py
src/mc/: cam.py  cli.py  crc.py  log.py  processing.py  stage.py  system.py
src/rit/: cam.py  cli.py  crc.py  processing.py  stage.py  storage.py  system.py
src/ui/: package.json
src/ui/src/: index.tsx  operate.tsx
src/web/: asset-manifest.json  index.html  main.py  manifest.json
src/web/static/js/: main.aae1ba5e.js  main.aae1ba5e.js.LICENSE.txt
